Tests/a1/reject/21.ul
int main (int x) {
	"2222"";
}